syntax = "proto3";

package taskpb;

option go_package = "utlsProxy/internal/taskpb";

message TaskRequest {
  string client_id = 1;
  string path = 2;
}

message TaskResponse {
  string client_id = 1;
  int32 status_code = 2;
  bytes body = 3;
  string error_message = 4;
  string file_path = 5; // 大响应体的文件路径，如果设置则优先使用文件而不是body
}

service TaskService {
  rpc Execute(TaskRequest) returns (TaskResponse);
}

